@startuml

package butterfly #DDDDDD
{

class std::exception
{

}

class ButterflyException
{
    - _error: std::string

    + ButterflyException(const std::string &error)

    + what(): const char*
    + virtual getType() const: std::string
}

class RSAEncryptionException
{

    + RSAEncryptionException(const std::string &error)

    + getType() const: std::string
}

class RSADecryptionException
{

    + RSADecryptionException(const std::string &error)

    + getType() const: std::string
}

class AESEncryptionException
{

    + AESEncryptionException(const std::string &error)

    + getType() const: std::string
}

class AESDecryptionException
{

    + AESDecryptionException(const std::string &error)

    + getType() const: std::string
}

class EncryptorException
{

    + EncryptorException(const std::string &error)

    + getType() const: std::string
}

class DecryptorException
{

    + DecryptorException(const std::string &error)

    + getType() const: std::string
}

class SocketException
{

    + SocketException(const std::string &error)

    + getType() const: std::string
}

class FileNotFoundException
{

    + FileNotFoundException(const std::string &error)

    + getType() const: std::string
}

class ConnectionException
{

    + ConnectionException(const std::string &error)

    + getType() const: std::string
}

class BrowserException
{

    + BrowserException(const std::string &error)

    + getType() const: std::string
}

std::exception <|-- ButterflyException
ButterflyException <|-- EncryptorException
ButterflyException <|-- DecryptorException

EncryptorException <|-- RSAEncryptionException
DecryptorException <|-- RSADecryptionException
EncryptorException <|-- AESEncryptionException
DecryptorException <|-- AESDecryptionException

ButterflyException <|-- SocketException
ButterflyException <|-- FileNotFoundException
ButterflyException <|-- ConnectionException
ButterflyException <|-- BrowserException

}
@enduml